# tunisia-price-tracker

./: .env.example  .env.production  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
admin/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package.json  pnpm-lock.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  64192ec3a278_add_sitemap_config_to_scraper_configs.py
backend/src/: __init__.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: prices.py  products.py  router.py  scrapers.py  search.py  stats.py  websites.py
backend/src/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/src/models/: __init__.py  api_key.py  base.py  category.py  price.py  product.py  scrape_log.py  scraper_config.py  website.py
backend/src/schemas/: __init__.py  common.py  price.py  product.py  scraper.py  search.py  website.py
backend/src/scrapers/: __init__.py  base.py  browser.py  config_driven.py  registry.py  sitemap.py
backend/src/scrapers/sites/: __init__.py  example_site.py
backend/src/services/: __init__.py  price_service.py  product_service.py  scraper_service.py  search_service.py  website_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
backend/tests/test_scrapers/: test_base.py
backend/workers/: __init__.py  beat_schedule.py  celery_app.py
backend/workers/tasks/: __init__.py  cleanup.py  scrape.py
nginx/: nginx.conf
scripts/: deploy.sh  generate_api_key.py  (+3 more)
(+16 files in other folders)
